--- a/style.css
+++ b/style.css
@@ -279,3 +279,7 @@ input[type="date"] {
   display: block;
   margin: 0 auto;
 }
+/* загрузка на кнопке */
+button .loader {
+  margin-left: 8px;
+}
