--- a/style.css
+++ b/style.css
@@ -288,3 +288,9 @@ input[type="date"] {
   min-height: 2.5em;  /* или padding */
   padding: 0.5em;
 }
+/* для подсказок*/
+@media (max-width: 768px) {
+  .tooltip-text {
+    display: none !important;
+  }
+}
